--- a/MenuExample/res/layout/activity_results.xml
+++ b/MenuExample/res/layout/activity_results.xml
@@ -5,59 +5,6 @@
     tools:context=".ResultsActivity" >
 
     <TextView
-        android:id="@+id/TextView1_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1_1"
-        android:layout_alignBottom="@+id/textView1_1"
-        android:layout_centerHorizontal="true"
-        android:text="11:23"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/TextView1_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/TextView1_2"
-        android:layout_alignBottom="@+id/TextView1_2"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="36dp"
-        android:text="00:23"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/TextView01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_alignLeft="@+id/TextView1_2"
-        android:text="Arrival" />
-
-    <TextView
-        android:id="@+id/TextView02"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/TextView01"
-        android:layout_alignBottom="@+id/TextView01"
-        android:layout_alignRight="@+id/TextView1_3"
-        android:text="Total Time" />
-
-    <TextView
-        android:id="@+id/textView1_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="38dp"
-        android:layout_marginTop="140dp"
-        android:text="11:00"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textSize="20sp" />
-
-    <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -130,5 +77,94 @@
         android:text="11:23"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView1_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView1"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="69dp"
+        android:text="11:00"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/more1"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/TextView1_3"
+        android:layout_alignBottom="@+id/TextView1_3"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="14dp"
+        android:minHeight="24dp"
+        android:minWidth="24dp"
+        android:text=">" />
+
+    <Button
+        android:id="@+id/more2"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/TextView3_3"
+        android:layout_alignLeft="@+id/more1"
+        android:minHeight="24dp"
+        android:minWidth="24dp"
+        android:text=">" />
+
+    <Button
+        android:id="@+id/more3"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/TextView3_3"
+        android:layout_alignBottom="@+id/TextView3_3"
+        android:layout_alignLeft="@+id/more2"
+        android:minHeight="24dp"
+        android:minWidth="24dp"
+        android:text=">" />
+
+    <TextView
+        android:id="@+id/TextView1_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/TextView1_2"
+        android:layout_alignBottom="@+id/TextView1_2"
+        android:layout_marginLeft="142dp"
+        android:layout_toRightOf="@+id/TextView1_2"
+        android:text="00:23"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/TextView1_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView1_1"
+        android:layout_alignBottom="@+id/textView1_1"
+        android:layout_marginLeft="129dp"
+        android:layout_toRightOf="@+id/TextView3_1"
+        android:text="11:23"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView1_1"
+        android:layout_alignLeft="@+id/TextView1_2"
+        android:text="Arrival" />
+
+    <TextView
+        android:id="@+id/TextView02"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/TextView01"
+        android:layout_alignBottom="@+id/TextView01"
+        android:layout_alignRight="@+id/TextView1_3"
+        android:text="Total Time" />
 
 </RelativeLayout>
