--- a/MenuExample/res/layout/activity_main.xml
+++ b/MenuExample/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:src="@drawable/unilink" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/TextView1_dep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/imageButton2"
@@ -34,32 +34,32 @@
         android:src="@drawable/bus2" />
 
     <TextView
-        android:id="@+id/TextView01"
+        android:id="@+id/TextView1_arr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
+        android:layout_alignBaseline="@+id/TextView1_dep"
+        android:layout_alignBottom="@+id/TextView1_dep"
         android:layout_alignRight="@+id/ImageButton01"
         android:layout_marginRight="30dp"
         android:text="Navigate To..."
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/TextView03"
+        android:id="@+id/TextView1_walk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/TextView02"
-        android:layout_alignBottom="@+id/TextView02"
-        android:layout_alignRight="@+id/TextView01"
+        android:layout_alignBaseline="@+id/TextView1_time"
+        android:layout_alignBottom="@+id/TextView1_time"
+        android:layout_alignRight="@+id/TextView1_arr"
         android:layout_marginRight="17dp"
         android:text="Settings"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/TextView02"
+        android:id="@+id/TextView1_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/textView1"
+        android:layout_alignRight="@+id/TextView1_dep"
         android:layout_below="@+id/ImageButton03"
         android:layout_marginTop="26dp"
         android:text="View Routes"
