--- a/MenuExample/res/layout/activity_search_bus_stop.xml
+++ b/MenuExample/res/layout/activity_search_bus_stop.xml
@@ -5,7 +5,7 @@
     tools:context=".SearchBusStopActivity" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/TextView1_dep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -17,14 +17,14 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView1"
+        android:layout_above="@+id/TextView1_dep"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="34dp"
         android:text="Find Nearest Bus Stop"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/TextView01"
+        android:id="@+id/TextView1_arr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
